Dispatch on error instead of throw if ANE return null loaderId. Timeout for dns resolve and tcp connection for windows native loader. Added test project to c# dll. Added missing android idea file.

--- a/windowsCSharpLibrary/UrlLoaderNativeLibrary/UrlLoaderNativeLibrary.csproj
+++ b/windowsCSharpLibrary/UrlLoaderNativeLibrary/UrlLoaderNativeLibrary.csproj
@@ -2,11 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
-        <RuntimeIdentifier>win-x86</RuntimeIdentifier>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
-    <PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+        <RuntimeIdentifier>win-x86</RuntimeIdentifier>
         <PublishAot>true</PublishAot>
     </PropertyGroup>
 
