--- a/windowsNative/CMakeLists.txt
+++ b/windowsNative/CMakeLists.txt
@@ -4,8 +4,8 @@ project(windowsNative)
 set(CMAKE_CXX_STANDARD 17)
 
 # Definindo as opções de compilação para Debug e Release
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /D_ITERATOR_DEBUG_LEVEL=2 /MDd")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /D_ITERATOR_DEBUG_LEVEL=0 /MD")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /D_ITERATOR_DEBUG_LEVEL=2 /MTd")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /D_ITERATOR_DEBUG_LEVEL=0 /MT")
 
 if(CMAKE_SIZEOF_VOID_P EQUAL 8)
     message(STATUS "Compiling for x64")
